2004-10-09  Pino Toscano <toscano.pino@tiscali.it>

	* Add a CircleByCenterAndDiameter object, to construct a circle
	using a point as center and the length of a segment as diameter.

	* A new SVG exporter to make SVG documents starting form Kig
	documents.

2004-10-08  Maurizio Paolini <paolini@dmf.unicatt.it>

	* Added the construction of the center of curvature for
	conics and cubics.  It works similarly to the construction
	of the tangent and the arguments are a curve (conic or cubic)
	and a point on in.  Using the center of curvature it is 
	straightforward to construct the osculating circle or the
	evolute.

2004-09-13  Pino Toscano <toscano.pino@tiscali.it>

	* The script code editor now can use the Kate KTextEditor, and
	consequently we can use its interfaces to do some various thing,
	like the syntax highlight of the code. Moreover if the
	KTextEditor::Document could not be created, will be used a
	standard KTextEdit as the code editor.

	* Some i18n fixes.

2004-09-10  Maurizio Paolini  <paolini@dmf.unicatt.it>

	* Now it's possible to construct the tanget to a cubic.

2004-09-05  Pino Toscano <toscano.pino@tiscali.it>

	* A new LaTex exporter.

	* Add a new little system to handle script's properties like
	icon, template code and stuff related to script type.

	* Now any change in the Types Dialog is applied when the users
	click OK. If Cancel is pressed, any change is lost, even types
	addition/deletion. This is done by saving the types when Types
	Dialog is started.

	* Now the user can choose Start->Python Script from the popup
	menu to start a new Python script with the selected objects as
	arguments. If there are no objects selected, the Script Wizard
	starts as usual.

	* Add the main Kig icons with size 22 and 64.

	* The KSeg filter can import bisector lines.

	* Add a new tip.

2004-09-02  Dominique Devriese  <devriese@kde.org>

	* Commit David Vignoni's new kig_doc icon

2004-09-01  Pino Toscano <toscano.pino@tiscali.it>
